[gd_scene load_steps=16 format=3 uid="uid://hndeylx84u07"]

[ext_resource type="Script" uid="uid://1ijb2mpvdloj" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="Texture2D" uid="uid://ct8hfqpktlvvb" path="res://GUI/upgrade/upgrade_bg.png" id="2_0xm2m"]
[ext_resource type="Texture2D" uid="uid://ctpt08xxjfcc8" path="res://GUI/upgrade/upgrade_max_health.png" id="3_w48qg"]
[ext_resource type="Texture2D" uid="uid://b0mompj1gn64e" path="res://GUI/upgrade/upgrade_max_health_click.png" id="4_vivmo"]
[ext_resource type="Texture2D" uid="uid://c58v34u6nw4r" path="res://GUI/upgrade/upgrade_max_health_disabled.png" id="5_2cqfq"]
[ext_resource type="Texture2D" uid="uid://1e2xbed4in3" path="res://GUI/upgrade/upgrade_damage.png" id="6_yaehf"]
[ext_resource type="Texture2D" uid="uid://can6cnlj58y6y" path="res://GUI/upgrade/upgrade_damage_click.png" id="7_074og"]
[ext_resource type="Texture2D" uid="uid://ch7syqv2wpypq" path="res://GUI/upgrade/upgrade_damage_disabled.png" id="8_cegan"]
[ext_resource type="Texture2D" uid="uid://tdfkjsg5iga" path="res://GUI/upgrade/upgrade_fire_rate.png" id="9_82xsv"]
[ext_resource type="Texture2D" uid="uid://dwb6gs3ldc4do" path="res://GUI/upgrade/upgrade_fire_rate_click.png" id="10_getpj"]
[ext_resource type="Texture2D" uid="uid://d1js4em56ewbw" path="res://GUI/upgrade/upgrade_fire_rate_disabled.png" id="11_ryguw"]
[ext_resource type="Texture2D" uid="uid://cpftm8kbts1wo" path="res://GUI/upgrade/upgrade_maneuverability.png" id="12_d13ii"]
[ext_resource type="Texture2D" uid="uid://co1k13jimsj7q" path="res://GUI/upgrade/upgrade_maneuverability_click.png" id="13_1u8w0"]
[ext_resource type="Texture2D" uid="uid://crk8gd1u6mt0q" path="res://GUI/upgrade/upgrade_maneuverability_disabled.png" id="14_0odxb"]
[ext_resource type="Texture2D" uid="uid://dykurlmdaudc4" path="res://GUI/upgrade/navigate.png" id="15_vivmo"]

[node name="Main" type="Node2D"]
script = ExtResource("1_0xm2m")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_0xm2m")
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 94.0
offset_top = 360.0
offset_right = 469.0
offset_bottom = 969.0
theme_override_constants/separation = 30

[node name="UpgradeHealth" type="TextureButton" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("3_w48qg")
texture_pressed = ExtResource("4_vivmo")
texture_disabled = ExtResource("5_2cqfq")

[node name="UpgradeDamage" type="TextureButton" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("6_yaehf")
texture_pressed = ExtResource("7_074og")
texture_disabled = ExtResource("8_cegan")

[node name="UpgradeFireRate" type="TextureButton" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("9_82xsv")
texture_pressed = ExtResource("10_getpj")
texture_disabled = ExtResource("11_ryguw")

[node name="UpgradeManeuverability" type="TextureButton" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("12_d13ii")
texture_pressed = ExtResource("13_1u8w0")
texture_disabled = ExtResource("14_0odxb")

[node name="Play" type="TextureButton" parent="."]
offset_left = 1010.0
offset_top = 329.0
offset_right = 1475.0
offset_bottom = 447.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("15_vivmo")

[connection signal="button_up" from="VBoxContainer/UpgradeHealth" to="." method="_on_upgrade_health_pressed"]
[connection signal="button_up" from="VBoxContainer/UpgradeDamage" to="." method="_on_upgrade_damage_pressed"]
[connection signal="pressed" from="VBoxContainer/UpgradeFireRate" to="." method="_on_upgrade_fire_rate_button_down"]
[connection signal="button_up" from="VBoxContainer/UpgradeManeuverability" to="." method="_on_upgrade_maneuverability_pressed"]
[connection signal="button_up" from="Play" to="." method="_on_play_button_down"]
